--- a/admin/index.html
+++ b/admin/index.html
@@ -12,9 +12,9 @@
   <meta http-equiv='expires' content='0'> 
   <meta http-equiv='pragma' content='no-cache'> 
 
-  <link rel="icon" type="image/png" href="theme/images/cube.png">
+  <link rel="icon" type="image/png" href="theme/images/logo_dark.png">
 
-  <title>LXDWARE</title>
+  <title>lxdware - dashboard</title>
 
   <!-- Custom fonts for this template-->
   <link href="theme/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -39,10 +39,10 @@
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-0">
-          <!--<img src="theme/images/cube.png" style="width: 2rem;"></img>-->
-          <i class="fas fa-cube" style="width: 2rem;"></i>
+          <img src="theme/images/logo_dark.png" style="width: 2rem;"></img>
+          <!-- <i class="fas fa-cube" style="width: 2rem;"></i> -->
         </div>
-        <div class="sidebar-brand-text mx-3"><span style="color: #e95420;">LXD</span>WARE</div>
+        <div class="sidebar-brand-text mx-3">Dashboard</div>
       </a>
 
       <!-- Divider -->
