--- a/admin/sidebar.html
+++ b/admin/sidebar.html
@@ -1,10 +1,10 @@
 <!-- Sidebar - Brand -->
 <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
   <div class="sidebar-brand-icon rotate-n-0">
-    <!--<img src="theme/images/cube.png" style="width: 2rem;"></img>-->
-    <i class="fas fa-cube" style="width: 2rem;"></i>
+    <img src="theme/images/logo_dark.png" style="width: 2rem;"></img>
+    <!-- <i class="fas fa-cube" style="width: 2rem;"></i> -->
   </div>
-  <div class="sidebar-brand-text mx-3"><span style="color: #e95420;">LXD</span>WARE</div>
+  <div class="sidebar-brand-text mx-3">Dashboard</div>
 </a>
 
 <!-- Divider -->
