--- a/admin/images.html
+++ b/admin/images.html
@@ -9,9 +9,9 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <link rel="icon" type="image/png" href="theme/images/cube.png">
+  <link rel="icon" type="image/png" href="theme/images/logo_dark.png">
 
-  <title>LXDWARE</title>
+  <title>lxdware - dashboard</title>
 
   <!-- Custom fonts for this template-->
   <link href="theme/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
