--- a/admin/index.html
+++ b/admin/index.html
@@ -12,7 +12,7 @@
   <meta http-equiv='expires' content='0'> 
   <meta http-equiv='pragma' content='no-cache'> 
 
-  <link rel="icon" type="image/png" href="theme/images/logo_dark.png">
+  <link rel="icon" type="image/png" href="theme/images/logo_light.png">
 
   <title>lxdware - dashboard</title>
 
