--- a/admin/instances.html
+++ b/admin/instances.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <link rel="icon" type="image/png" href="theme/images/logo_dark.png">
+  <link rel="icon" type="image/png" href="theme/images/logo_light.png">
 
   <title>lxdware - dashboard</title>
 
@@ -321,7 +321,8 @@
         { title: "Name" },
         { title: "Image" },
         { title: "Type" },
-        { title: "Architecture" },
+        { title: "Memory Usage" },
+        { title: "Root Disk Usage" },
         { title: "Status" },
         { title: "Action" }
       ],
