--- a/admin/certificates.html
+++ b/admin/certificates.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <link rel="icon" type="image/png" href="theme/images/logo_dark.png">
+  <link rel="icon" type="image/png" href="theme/images/logo_light.png">
 
   <title>lxdware - dashboard</title>
 
