--- a/admin/certificates.html
+++ b/admin/certificates.html
@@ -88,7 +88,7 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600">Admin</span>
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
@@ -232,7 +232,6 @@
     </div>
   </div>
 
-
   <!-- Bootstrap core JavaScript-->
   <script src="theme/vendor/jquery/jquery.min.js"></script>
   <script src="theme/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -263,8 +262,37 @@
     window.location.replace("../index.html");
   }
 
+  function operationStatusCheck(){
+    //check to see if there are any running operations
+    $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName), function (data) {
+      //Check to see if we have running operations
+      if (data){
+        //Display spinner and notification area if there are running tasks
+        $('#spinner').show();
+        $('#notificationArea').show();
+        $('#notification').text(data);
+        //Set the page to check operations again in 1 second
+        setTimeout(() => { operationStatusCheck(); }, 1000);
+      }
+      else {
+        //Hide spinner and notification area if no running tasks
+        $('#spinner').hide();
+        $('#notificationArea').hide();
+        $('#notification').text("");
+        //Set the page to check operations again in 3 seconds
+        setTimeout(() => { operationStatusCheck(); }, 3000);
+      }
+    });
+  }
+
+  function reloadPageContent(){
+    $('#certificateListTable').DataTable().ajax.reload();
+
+    //Set the page content to reload again in 3 more seconds
+    setTimeout(() => { reloadPageContent(); }, 3000);
+  }
+  
   function loadPageContent(){
-    
     //Check Authorization
     $.get("./php/auth/auth-check.php", function (data) {
       if(data != "true"){
@@ -286,10 +314,12 @@
         { targets: 0, orderable: false, width: "25px" }
       ]
     });
-  }
 
-  function reloadPageContent(){
-    $('#certificateListTable').DataTable().ajax.reload();
+    //Check for any running operations
+    operationStatusCheck();
+
+    //Set the page content to reload once in 3 seconds
+    setTimeout(() => { reloadPageContent(); }, 3000);
   }
 
   //API uses sync
@@ -302,7 +332,7 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      setTimeout(() => { reloadPageContent(); }, 1000); 
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -332,7 +362,7 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      setTimeout(() => { reloadPageContent(); }, 1000); 
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -345,10 +375,9 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      setTimeout(() => { reloadPageContent(); }, 1000); 
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
-
 
   $(document).ready(function(){
 
@@ -362,9 +391,6 @@
 
     //Load the card contents
     loadPageContent();
-
-    //Set page reload every 15 seconds
-    setInterval(function(){reloadPageContent()}, 15000);
 
     $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
     $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
