--- a/admin/sidebar.html
+++ b/admin/sidebar.html
@@ -10,6 +10,18 @@
 <!-- Divider -->
 <hr class="sidebar-divider">
 
+<div id="hosts">
+      <!-- Nav Item - Hosts -->
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">
+          <i class="fas fa-fw fa-server"></i>
+          <span>Hosts</span></a>
+      </li>
+</div>
+
+<!-- Divider -->
+<hr class="sidebar-divider">
+
 <div id="main">
   <!-- Nav Item - Instances -->
   <li class="nav-item">
@@ -55,7 +67,7 @@
   <!-- Nav Item - Cluster-->
   <li class="nav-item">
     <a class="nav-link" id="clusterLinkSidebar" href="#">
-      <i id="clusterIcon" class="fas fa-fw fa-layer-group"></i>
+      <i id="clusterIcon" class="fas fa-fw fa-project-diagram "></i>
       <span id="cluterSpan">Cluster</span>
     </a>
   </li>
@@ -63,7 +75,7 @@
   <!-- Nav Item - Projects-->
   <li class="nav-item">
     <a class="nav-link" id="projectsLinkSidebar" href="#">
-      <i id="projectsIcon" class="fas fa-fw fa-project-diagram"></i>
+      <i id="projectsIcon" class="fas fa-fw fa-chart-bar"></i>
       <span id="projectsSpan">Projects</span>
     </a>
   </li>
