--- a/admin/cluster.html
+++ b/admin/cluster.html
@@ -88,7 +88,7 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600">Admin</span>
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
@@ -168,8 +168,6 @@
     <i class="fas fa-angle-up"></i>
   </a>
 
-
-
   <!-- Bootstrap core JavaScript-->
   <script src="theme/vendor/jquery/jquery.min.js"></script>
   <script src="theme/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -199,6 +197,36 @@
     window.location.replace("../index.html");
   }
 
+  function operationStatusCheck(){
+    //check to see if there are any running operations
+    $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName), function (data) {
+      //Check to see if we have running operations
+      if (data){
+        //Display spinner and notification area if there are running tasks
+        $('#spinner').show();
+        $('#notificationArea').show();
+        $('#notification').text(data);
+        //Set the page to check operations again in 1 second
+        setTimeout(() => { operationStatusCheck(); }, 1000);
+      }
+      else {
+        //Hide spinner and notification area if no running tasks
+        $('#spinner').hide();
+        $('#notificationArea').hide();
+        $('#notification').text("");
+        //Set the page to check operations again in 3 seconds
+        setTimeout(() => { operationStatusCheck(); }, 3000);
+      }
+    });
+  }
+
+  function reloadPageContent() {
+    $('#clusterMemberListTable').DataTable().ajax.reload();
+
+    //Set the page content to reload again in 3 more seconds
+    setTimeout(() => { reloadPageContent(); }, 3000);
+  }
+  
   function loadPageContent(){
     //Check Authorization
     $.get("./php/auth/auth-check.php", function (data) {
@@ -223,10 +251,12 @@
         { targets: 0, orderable: false, width: "25px" }
       ]
     });
-  }
 
-  function reloadPageContent() {
-    $('#clusterMemberListTable').DataTable().ajax.reload();
+    //Check for any running operations
+    operationStatusCheck();
+
+    //Set the page content to reload once in 3 seconds
+    setTimeout(() => { reloadPageContent(); }, 3000);
   }
 
   //API uses sync
@@ -242,7 +272,6 @@
     });
   }
 
-
   $(document).ready(function(){
 
      //Load in the sidebar
@@ -256,14 +285,10 @@
     //Load the card contents
     loadPageContent();
 
-    //Set page reload every 15 seconds
-    setInterval(function(){reloadPageContent()}, 15000);
-
     $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
     $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
 
   });
-
 
 </script>
 
