--- a/admin/instances.html
+++ b/admin/instances.html
@@ -88,7 +88,7 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600">Admin</span>
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
@@ -256,7 +256,6 @@
   const urlParams = new URLSearchParams(queryString);
   const remoteName = urlParams.get('remote');
   const projectName = urlParams.get('project');
-  var operationNumbers = [];
 
   function logout(){
     var http = new XMLHttpRequest();
@@ -266,45 +265,35 @@
   }
 
   function operationStatusCheck(){
-    operationNumbers = operationNumbers.filter(function(e){return e}); 
-    var numberOfOperations = operationNumbers.length;
-    if (numberOfOperations > 0){
-      $('#spinner').show();
-      for (i = 0; i < numberOfOperations; i++){
-        var elementNumber = i;
-        $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName) + "&id=" + encodeURI(operationNumbers[elementNumber]) , function (data) {
-          var operationData = JSON.parse(data);
-          console.log(operationData);
-          if (operationData.error_code == 404) { 
-            operationNumbers[elementNumber] = undefined;
-            reloadPageContent();
-          }
-          if (operationData.status_code == 200) {
-            if (operationData.metadata.status_code == 103){
-              $('#notificationArea').show();
-              $('#notification').text(operationData.metadata.description);
-            }
-            if (operationData.metadata.status_code == 200){
-              operationNumbers[elementNumber] = undefined;
-              reloadPageContent();
-            }
-            if (operationData.metadata.status_code >= 400){
-              operationNumbers[elementNumber] = undefined;
-              alert(operationData.metadata.err);
-              reloadPageContent();
-            }
-          } 
-        });
+    //check to see if there are any running operations
+    $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName), function (data) {
+      //Check to see if we have running operations
+      if (data){
+        //Display spinner and notification area if there are running tasks
+        $('#spinner').show();
+        $('#notificationArea').show();
+        $('#notification').text(data);
+        //Set the page to check operations again in 1 second
+        setTimeout(() => { operationStatusCheck(); }, 1000);
       }
-      setTimeout(() => { operationStatusCheck(); }, 4000);
-    }
-    else {
-      $('#spinner').hide();
-      $('#notificationArea').hide();
-      $('#notification').text("");
-    }
+      else {
+        //Hide spinner and notification area if no running tasks
+        $('#spinner').hide();
+        $('#notificationArea').hide();
+        $('#notification').text("");
+        //Set the page to check operations again in 3 seconds
+        setTimeout(() => { operationStatusCheck(); }, 3000);
+      }
+    });
   }
 
+  function reloadPageContent(){
+    $('#instanceListTable').DataTable().ajax.reload();
+
+    //Set the page content to reload again in 3 more seconds
+    setTimeout(() => { reloadPageContent(); }, 3000);
+  }
+  
   function loadPageContent(){
 
     //Check Authorization
@@ -320,6 +309,7 @@
         {},
         { title: "Name" },
         { title: "Image" },
+        { title: "Location" },
         { title: "Type" },
         { title: "Memory Usage" },
         { title: "Root Disk Usage" },
@@ -331,10 +321,13 @@
         { targets: 0, orderable: false, width: "25px" }
       ]
     });
-  }
 
-  function reloadPageContent(){
-    $('#instanceListTable').DataTable().ajax.reload();
+    //Check for any running operations
+    operationStatusCheck();
+
+    //Set the page content to reload once in 3 seconds
+    setTimeout(() => { reloadPageContent(); }, 3000);
+
   }
 
   function createInstance(){
@@ -347,7 +340,6 @@
       var operationData = JSON.parse(data);
       console.log(operationData);
       if (operationData.status_code == 100 && operationData.metadata.status_code < 400){
-        operationNumbers.push(operationData.metadata.id);
         operationStatusCheck();
       }
       if (operationData.metadata.status_code >= 400){
@@ -356,7 +348,7 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      setTimeout(() => { operationStatusCheck(); }, 4000);
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -366,13 +358,12 @@
       var operationData = JSON.parse(data);
       console.log(operationData);
       if (operationData.status_code == 100 && operationData.metadata.status_code < 400){
-        operationNumbers.push(operationData.metadata.id);
         operationStatusCheck();
       }
       if (operationData.metadata.status_code >= 400){
         alert(operationData.metadata.err);
       }
-      setTimeout(() => { operationStatusCheck(); }, 4000);
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -382,13 +373,12 @@
       var operationData = JSON.parse(data);
       console.log(operationData);
       if (operationData.status_code == 100 && operationData.metadata.status_code < 400){
-        operationNumbers.push(operationData.metadata.id);
         operationStatusCheck();
       }
       if (operationData.metadata.status_code >= 400){
         alert(operationData.metadata.err);
       }
-      setTimeout(() => { operationStatusCheck(); }, 4000);
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -414,9 +404,6 @@
     //$("#selectImageInput").load("./php/lxd/image-list-select.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
     changeImageInput();
     $("#selectProfileInput").load("./php/lxd/profile-list-select.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
-
-    //Set page reload every 15 seconds
-    setInterval(function(){reloadPageContent()}, 15000);
 
     $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
     $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
