--- a/admin/instance.html
+++ b/admin/instance.html
@@ -62,10 +62,10 @@
           <!-- Topbar Navbar -->
           <ul class="navbar-nav ml-auto"> 
 
-            <li class="nav-item dropdown no-arrow" id="remoteListNav">
+            <li class="nav-item dropdown" id="remoteListNav">
             </li>
 
-            <li class="nav-item dropdown no-arrow" id="projectListNav">
+            <li class="nav-item dropdown" id="projectListNav">
             </li>
 
             <li>
