--- a/admin/host.html
+++ b/admin/host.html
@@ -58,6 +58,25 @@
           </button>
 
 
+          <!-- Topbar Notification -->
+          <div class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+            <ul class="navbar-nav ml-auto"> 
+
+              <li>
+                <div class="nav-item spinner-border m-3" role="status" style="display:none;" id="spinner">
+                  <span class="nav-item sr-only">Loading...</span>
+                </div>
+              </li>
+  
+              <li class="nav-item dropdown no-arrow" id="notificationArea" style="display: none;">
+                <div class="nav-link dropdown-toggle">
+                  <span id="notification" class="mr-2 d-none d-lg-inline text-gray-600">Notification</span>
+                </div>
+              </li>
+              
+            </ul>
+          </div>
+
 
           <!-- Topbar Navbar -->
           <ul class="navbar-nav ml-auto"> 
@@ -68,20 +87,7 @@
             <li class="nav-item dropdown" id="projectListNav">
             </li>
 
-            <li>
-              <div class="nav-item spinner-grow text-primary m-3" role="status" style="display:none;" id="spinner">
-                <span class="nav-item sr-only">Loading...</span>
-              </div>
-            </li>
-
-            <li class="nav-item dropdown no-arrow" id="notificationArea" style="display: none;">
-              <div class="nav-link dropdown-toggle">
-                <span id="notification" class="mr-2 d-none d-lg-inline text-gray-600">Notification</span>
-              </div>
-            </li>
-
             <div class="topbar-divider d-none d-sm-block"></div>
-
 
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
@@ -358,11 +364,7 @@
     $("#projectCard").load("./php/lxd/hosts.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName) + "&action=projectInfo");
     $("#clusterCard").load("./php/lxd/hosts.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName) + "&action=clusterInfo");
     $("#lxdCard").load("./php/lxd/hosts.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName) + "&action=lxdInfo");
-
-    $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
-    $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
     
-
     //Set the page content to reload again in 5 more seconds
     setTimeout(() => { reloadPageContent(); }, 5000);
   }
@@ -382,9 +384,6 @@
     $("#clusterCard").load("./php/lxd/hosts.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName) + "&action=clusterInfo");
     $("#lxdCard").load("./php/lxd/hosts.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName) + "&action=lxdInfo");
 
-    $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
-    $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
-
     //Check for any running operations
     operationStatusCheck();
 
@@ -403,6 +402,9 @@
 
     //Load Page Content
     loadPageContent();
+
+    $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
+    $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
 
   });
 
