--- a/admin/instance.html
+++ b/admin/instance.html
@@ -58,6 +58,25 @@
           </button>
 
 
+          <!-- Topbar Notification -->
+          <div class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+            <ul class="navbar-nav ml-auto"> 
+
+              <li>
+                <div class="nav-item spinner-border m-3" role="status" style="display:none;" id="spinner">
+                  <span class="nav-item sr-only">Loading...</span>
+                </div>
+              </li>
+  
+              <li class="nav-item dropdown no-arrow" id="notificationArea" style="display: none;">
+                <div class="nav-link dropdown-toggle">
+                  <span id="notification" class="mr-2 d-none d-lg-inline text-gray-600">Notification</span>
+                </div>
+              </li>
+              
+            </ul>
+          </div>
+          
 
           <!-- Topbar Navbar -->
           <ul class="navbar-nav ml-auto"> 
@@ -66,18 +85,6 @@
             </li>
 
             <li class="nav-item dropdown" id="projectListNav">
-            </li>
-
-            <li>
-              <div class="nav-item spinner-grow text-primary m-3" role="status" style="display:none;" id="spinner">
-                <span class="nav-item sr-only">Loading...</span>
-              </div>
-            </li>
-
-            <li class="nav-item dropdown no-arrow" id="notificationArea" style="display: none;">
-              <div class="nav-link dropdown-toggle">
-                <span id="notification" class="mr-2 d-none d-lg-inline text-gray-600 small">Notification</span>
-              </div>
             </li>
 
             <div class="topbar-divider d-none d-sm-block"></div>
@@ -1165,12 +1172,12 @@
     //Load the card contents
     loadPageContent();
 
+    $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
+    $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
+
     //Populate the select options fields used in modals
     $("#selectProfileInput").load("./php/lxd/profile-list-select.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
     $("#selectClusterInput").load("./php/lxd/cluster-list-select.php?remote=" + encodeURI(remoteName));
-
-    $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
-    $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
 
   });
 
